# Food-Delivery/api_gateway_service/docs/swagger.json
@@ -4942,7 +4942,7 @@
                 }
             }
         },
-        "user.Courier": {
+        "user.CourierAuth": {
             "type": "object",
             "properties": {
                 "courier_id": {
@@ -4969,7 +4969,7 @@
                     "description": "Kuryer holati",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/user.CourierStatus"
+                            "$ref": "#/definitions/user.CourierStatusAuth"
                         }
                     ]
                 },
@@ -4999,7 +4999,7 @@
                     "description": "Kuryer ma'lumotlari",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/user.Courier"
+                            "$ref": "#/definitions/user.CourierAuth"
                         }
                     ]
                 },
@@ -5045,7 +5045,7 @@
                     "description": "Kuryer ma'lumotlari",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/user.Courier"
+                            "$ref": "#/definitions/user.CourierAuth"
                         }
                     ]
                 },
@@ -5059,7 +5059,7 @@
                 }
             }
         },
-        "user.CourierStatus": {
+        "user.CourierStatusAuth": {
             "type": "integer",
             "enum": [
                 0,
@@ -5067,9 +5067,9 @@
                 2
             ],
             "x-enum-varnames": [
-                "CourierStatus_AVAILABLE",
-                "CourierStatus_UNAVAILABLE",
-                "CourierStatus_ON_DELIVERY"
+                "CourierStatusAuth_Courier_AVAILABLE",
+                "CourierStatusAuth_Courier_UNAVAILABLE",
+                "CourierStatusAuth_Courier_ON_DELIVERY"
             ]
         },
         "user.GetAllCouriersResponse": {
@@ -5078,7 +5078,7 @@
                 "couriers": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/user.Courier"
+                        "$ref": "#/definitions/user.CourierAuth"
                     }
                 },
                 "message": {
@@ -5206,7 +5206,7 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "description": "Foydalanuvchi email manzili",
+                    "description": "Foydalanuvchi email manzilix",
                     "type": "string"
                 },
                 "full_name": {
